responsive galaxy tab + menu icon + footer + detalles varios

--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                 <a href=""><li>COMUNIDAD</li></a>
             </ul>
         </div>
-        <div>
+        <div class="footerFormContainer">
             <form class="footerForm">
                 <label for="email">NESWLETTER</label>
-                <input type="email">
+                <input type="email" class="footerInputEmail">
                 <input type="image" src="./assets/img/correo-electronico.png" class="sendForm">
             </form>
         </div>
