--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Experience</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./assets/img/logo.png">
 </head>
@@ -13,7 +14,9 @@
             <a href="#"><img src="./assets/img/logo.png" alt=""></a>
             <a href="#">Life Experience</a>
         </div>
-        <nav>
+        <nav class="headerMenu">
+            <input type="checkbox" name="" id="toggle">
+            <label for="toggle"><i class="material-icons">menu</i></label>
             <ul class="navBar">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="./pages/sedes.html">Sedes</a></li>
