--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
 </head>
 <body>
     <header class="headerIndex">
-        <div class="logo">
-            <a href="#"><img src="./assets/img/logo.png" alt=""></a>
-            <a href="#">Life Experience</a>
-        </div>
         <nav class="headerMenu">
+            <div class="headerLogo">
+                <a href="#"><img src="./assets/img/logo.png" alt=""></a>
+                <a href="#">Life Experience</a>
+            </div>
             <input type="checkbox" name="" id="toggle">
             <label for="toggle"><i class="material-icons">menu</i></label>
-            <ul class="navBar">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="./pages/sedes.html">Sedes</a></li>
-                <li><a href="./pages/f.a.q.html">F.A.Q.</a></li>
-                <li><a href="./pages/reservas.html">Reservas</a></li>
-                <li><a href="./pages/contacto.html">Contacto</a></li>
-            </ul>
+            <div>
+                <ul class="navBar">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="./pages/sedes.html">Sedes</a></li>
+                    <li><a href="./pages/f.a.q.html">F.A.Q.</a></li>
+                    <li><a href="./pages/reservas.html">Reservas</a></li>
+                    <li><a href="./pages/contacto.html">Contacto</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <main>
