--- a/pages/sedes.html
+++ b/pages/sedes.html
@@ -8,18 +8,22 @@
 </head>
 <body>
     <header class="headerIndex">
-        <div class="logo">
-            <a href="../index.html"><img src="../assets/img/logo.png" alt=""></a>
-            <a href="../index.html">Life Experience</a>
-        </div>
-        <nav>
-            <ul class="navBar">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="#">Sedes</a></li>
-                <li><a href="f.a.q.html">F.A.Q.</a></li>
-                <li><a href="reservas.html">Reservas</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
+        <nav class="headerMenu">
+            <div class="headerLogo">
+                <a href="#"><img src="../assets/img/logo.png" alt=""></a>
+                <a href="#">Life Experience</a>
+            </div>
+            <input type="checkbox" name="" id="toggle">
+            <label for="toggle"><i class="material-icons">menu</i></label>
+            <div>
+                <ul class="navBar">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="#">Sedes</a></li>
+                    <li><a href="f.a.q.html">F.A.Q.</a></li>
+                    <li><a href="reservas.html">Reservas</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
     <main>
