media query 425 (menu desplegable)

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </div>
             <input type="checkbox" name="" id="toggle">
             <label for="toggle"><i class="material-icons">menu</i></label>
-            <div>
-                <ul class="navBar">
+            <div class="navBar">
+                <ul>
                     <li><a href="#">Inicio</a></li>
                     <li><a href="./pages/sedes.html">Sedes</a></li>
                     <li><a href="./pages/f.a.q.html">F.A.Q.</a></li>
