--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Life Experience</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../assets/img/logo.png">
 </head>
 <body>
     <header class="headerIndex">
         <nav class="headerMenu">
             <div class="headerLogo">
-                <a href="#"><img src="../assets/img/logo.png" alt=""></a>
-                <a href="#">Life Experience</a>
+                <a href="../index.html"><img src="../assets/img/logo.png" alt=""></a>
+                <a href="../index.html">Life Experience</a>
             </div>
             <input type="checkbox" name="" id="toggle">
             <label for="toggle"><i class="material-icons">menu</i></label>
-            <div>
-                <ul class="navBar">
+            <div class="navBar">
+                <ul>
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="sedes.html">Sedes</a></li>
                     <li><a href="f.a.q.html">F.A.Q.</a></li>
