--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -40,7 +40,7 @@
             <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl&pli=1#inbox?compose=GTvVlcRwPkVKRHPMqCXklPFPzgkgjzkvGFMWpxFPljGSsGnkHpjPcnjlNjMJWlHHChSqkhMncGBKk" target="_blank"><h4>sosalucas906@gmail.com</h4></a>
         </section>
         <div class="contactForm">
-            <form>
+            <form class="contactFormInput">
                 <input type="text" class="formInput" placeholder="Nombre">
                 <input type="text" class="formInput" placeholder="Asunto">
                 <input type="email" class="formInput" placeholder="Mail">
