--- a/pages/futurix.html
+++ b/pages/futurix.html
@@ -73,10 +73,10 @@ tenia que crear una pagina mas y solo piden 5. proximamente lo completaré-->
                 <a href=""><li>COMUNIDAD</li></a>
             </ul>
         </div>
-        <div>
+        <div class="footerFormContainer">
             <form class="footerForm">
                 <label for="email">NESWLETTER</label>
-                <input type="email">
+                <input type="email" name="email" class="footerInputEmail" id="email">
                 <input type="image" src="../assets/img/correo-electronico.png" class="sendForm">
             </form>
         </div>
