--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -45,7 +45,7 @@
         <section class="bookingSchedule">
             <section class="bookingRooms">
                 <a href="./sedes.html"><img src="../assets/img/plano-medio-mujer-velo-negro.jpg" alt="mujer velo negro"></a>
-                <a href="./futurix.html"><img src="../assets/img/casa.jpg" alt="casa lujosa"></a>
+                <a href="./futurix.html"><img src="../assets/img/horror.jpg" alt="casa lujosa"></a>
                 <a href="./sedes.html"><img src="../assets/img/callejon-abandonado-hospital-psiquiatrico.jpg" alt="pasillo hospital abandonado"></a>
             </section>
             <div class="bookingAvailable">
@@ -82,10 +82,10 @@
                 <a href=""><li>COMUNIDAD</li></a>
             </ul>
         </div>
-        <div>
+        <div class="footerFormContainer">
             <form class="footerForm">
                 <label for="email">NESWLETTER</label>
-                <input type="email">
+                <input type="email" name="email" class="footerInputEmail" id="email">
                 <input type="image" src="../assets/img/correo-electronico.png" class="sendForm">
             </form>
         </div>
