--- a/pages/sedes.html
+++ b/pages/sedes.html
@@ -48,10 +48,10 @@
                 <a href=""><li>COMUNIDAD</li></a>
             </ul>
         </div>
-        <div>
+        <div class="footerFormContainer">
             <form class="footerForm">
                 <label for="email">NESWLETTER</label>
-                <input type="email">
+                <input type="email" name="email" class="footerInputEmail" id="email">
                 <input type="image" src="../assets/img/correo-electronico.png" class="sendForm">
             </form>
         </div>
