--- a/pages/reservas.html
+++ b/pages/reservas.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Experience</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
     <link rel="stylesheet" href="../css/style.css">
+    <script defer src="js/app.js" ></script>
     <link rel="shortcut icon" href="../assets/img/logo.png">
 </head>
 <body>
@@ -39,16 +41,16 @@
                     <label for="jugadores">Jugadores</label>
                     <input type="number" min="1" max="8" placeholder="0" id="jugadores">
                 </form>
-                <p>Valor:$</p>
+                <i>Valor:$</i>
             </div>
         </section>
         <section class="bookingSchedule">
             <section class="bookingRooms">
                 <a href="./sedes.html"><img src="../assets/img/plano-medio-mujer-velo-negro.jpg" alt="mujer velo negro"></a>
-                <a href="./futurix.html"><img src="../assets/img/horror.jpg" alt="casa lujosa"></a>
+                <a href="./sedes.html"><img src="../assets/img/horror.jpg" alt="casa lujosa"></a>
                 <a href="./sedes.html"><img src="../assets/img/callejon-abandonado-hospital-psiquiatrico.jpg" alt="pasillo hospital abandonado"></a>
             </section>
-            <div class="bookingAvailable">
+            <div class="bookingTimetable">
                 <h2>Viernes 15 de Octubre</h2>
                 <ul>
                     <li><a href="">13h disponible</a></li>
@@ -62,6 +64,11 @@
                     <li><a href="">21h disponible</a></li>
                     <li><a href="">22h disponible</a></li>
                 </ul>
+            </div>
+        </section>
+        <section>
+            <div>
+
             </div>
         </section>
     </main>
@@ -96,5 +103,7 @@
             <a href="https://www.instagram.com/" target="_blank"><img src="../assets/img/instagram-logo.png" alt=""></a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
