html reservas grid + ajuste fotos

--- a/pages/futurix.html
+++ b/pages/futurix.html
@@ -40,8 +40,8 @@ tenia que crear una pagina mas y solo piden 5. proximamente lo completaré-->
                 <h4>Tu vida, tu hogar, tu control</h4>
             </div>
             <div class="futurixMainImg">
-                <img src="../assets/img/casa.jpg" alt="Casa lujosa" class="img1">
-                <img src="../assets/img/casa-2.webp" alt="casa lujosa" class="img2">
+                <img src="../assets/img/casa.jpg" alt="Casa lujosa" class="futurixImg1">
+                <img src="../assets/img/casa-2.webp" alt="casa lujosa" class="futurixImg2">
             </div>
         </section>
         <!--aca incia la seccion 2 -->
