responsive reservas terminado + arreglos en footer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Experience</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="shortcut icon" href="./assets/img/logo.png">
 </head>
@@ -35,7 +35,9 @@
         <section class="indexMain">
             <div class="indexCarouselItem" id="carouselItem-1">
                 <div class="cardCarouselItem">
-                    <a href="./pages/sedes.html"><h2 class="carouselItem_1-h2">Caballito</h2></a>
+                    <a href="./pages/sedes.html">
+                        <h2 class="carouselItem_1-h2">Caballito</h2>
+                    </a>
                 </div>
                 <div class="arrowsCarouselItem">
                     <a href="#carouselItem-3">
@@ -48,7 +50,9 @@
             </div>
             <div class="indexCarouselItem" id="carouselItem-2">
                 <div class="cardCarouselItem">
-                    <a href="./pages/sedes.html"><h2 class="carouselItem_2-h2">Palermo</h2></a>
+                    <a href="./pages/sedes.html">
+                        <h2 class="carouselItem_2-h2">Palermo</h2>
+                    </a>
                 </div>
                 <div class="arrowsCarouselItem">
                     <a href="#carouselItem-1">
@@ -61,7 +65,9 @@
             </div>
             <div class="indexCarouselItem" id="carouselItem-3">
                 <div class="cardCarouselItem">
-                    <a href="./pages/sedes.html"><h2 class="carouselItem_3-h2">Belgrano</h2></a>
+                    <a href="./pages/sedes.html">
+                        <h2 class="carouselItem_3-h2">Belgrano</h2>
+                    </a>
                 </div>
                 <div class="arrowsCarouselItem">
                     <a href="#carouselItem-2">
@@ -75,7 +81,8 @@
         </section>
         <section>
             <div class="divEdge">
-                <h2>Lorem ipsum dolor sit amntium est quasi libero hic, minus corrupti ut natus iusto dolorem cupiditate illo numquam voluptatem nemo neque?</h2>
+                <h2>Lorem ipsum dolor sit amntium est quasi libero hic, minus corrupti ut natus iusto dolorem cupiditate
+                    illo numquam voluptatem nemo neque?</h2>
             </div>
         </section>
         <section class="indexRooms">
@@ -84,8 +91,12 @@
                     <a href=""><img src="./assets/img/creep-1.jpg" alt="hombre terrorífico"></a>
                 </div>
                 <div class="divText">
-                    <a href=""><h2>Atrapados sin salida</h2></a>
-                    <p>Lorem ipsum dolor sibus illo?Lorem pisicing elit. Natus, velit iure id, laudantium expedita distinctio adipisci perferendis, odio sunt voluptas autem numquam quo quibusdam ipsa magni recusandae corrupti vero dignissimos?</p>
+                    <a href="">
+                        <h2>Atrapados sin salida</h2>
+                    </a>
+                    <p>Lorem ipsum dolor sibus illo?Lorem pisicing elit. Natus, velit iure id, laudantium expedita
+                        distinctio adipisci perferendis, odio sunt voluptas autem numquam quo quibusdam ipsa magni
+                        recusandae corrupti vero dignissimos?</p>
                 </div>
             </article>
             <article class="roomSection">
@@ -93,8 +104,12 @@
                     <a href="./pages/futurix.html"><img src="./assets/img/casa-2.webp" alt="casa lujosa 2"></a>
                 </div>
                 <div class="divText">
-                    <a href="./pages/futurix.html"><h2>Futurix Hogares</h2></a>
-                    <p>Lorem ipsum dditiis sm ipsum dolipisicing elit. Iusto assumenda, eaque aut nesciunt tenetur facilis, architecto dolorum nam optio consectetur, quae perspiciatis neque minus excepturi! Iste, dicta quaerat! Et, sapiente!</p>    
+                    <a href="./pages/futurix.html">
+                        <h2>Futurix Hogares</h2>
+                    </a>
+                    <p>Lorem ipsum dditiis sm ipsum dolipisicing elit. Iusto assumenda, eaque aut nesciunt tenetur
+                        facilis, architecto dolorum nam optio consectetur, quae perspiciatis neque minus excepturi!
+                        Iste, dicta quaerat! Et, sapiente!</p>
                 </div>
             </article>
             <article class="roomSection">
@@ -102,8 +117,11 @@
                     <a href=""><img src="./assets/img/mistero.webp" alt="gorro, lupa y pipa"></a>
                 </div>
                 <div class="divText">
-                    <a href=""><h2>Sherlock Holmes vuelve</h2></a>
-                    <p>Lorem ipsum dolor qt cot.  nobis natus voluptatem quae! Nam quia porro impedit facilis harum officia, nihil molestiae reprehenderit? Amet molestiae quia consequatur saepe!</p>
+                    <a href="">
+                        <h2>Sherlock Holmes vuelve</h2>
+                    </a>
+                    <p>Lorem ipsum dolor qt cot. nobis natus voluptatem quae! Nam quia porro impedit facilis harum
+                        officia, nihil molestiae reprehenderit? Amet molestiae quia consequatur saepe!</p>
                 </div>
             </article>
         </section>
@@ -119,16 +137,24 @@
         </div>
         <div>
             <ul>
-                <a href=""><li>EVENTOS</li></a>
-                <a href=""><li>INFO ADICIONAL</li></a>
-                <a href=""><li>RECLAMOS</li></a>
-                <a href=""><li>COMUNIDAD</li></a>
+                <a href="">
+                    <li>EVENTOS</li>
+                </a>
+                <a href="">
+                    <li>INFO ADICIONAL</li>
+                </a>
+                <a href="">
+                    <li>RECLAMOS</li>
+                </a>
+                <a href="">
+                    <li>COMUNIDAD</li>
+                </a>
             </ul>
         </div>
         <div class="footerFormContainer">
             <form class="footerForm">
-                <label for="email">NESWLETTER</label>
-                <input type="email" name="email" class="footerInputEmail" id="email">
+                <label for="email">NEWSLETTER</label>
+                <input type="email" name="email" class="footerInputEmail" id="email" placeholder="Newsletter">
                 <input type="image" src="./assets/img/correo-electronico.png" class="sendForm">
             </form>
         </div>
@@ -139,5 +165,6 @@
             <a href="https://www.instagram.com/" target="_blank"><img src="./assets/img/instagram-logo.png" alt=""></a>
         </div>
     </footer>
-    </body>
+</body>
+
 </html>
