--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -71,8 +71,8 @@
         </div>
         <div>
             <form class="footerForm">
-                <label for="email">NESWLETTER</label>
-                <input type="email">
+                <label for="email">NEWSLETTER</label>
+                <input type="email" name="email" class="footerInputEmail" id="email" placeholder="Newsletter">
                 <input type="image" src="../assets/img/correo-electronico.png" class="sendForm">
             </form>
         </div>
