--- a/pages/sedes.html
+++ b/pages/sedes.html
@@ -50,8 +50,8 @@
         </div>
         <div class="footerFormContainer">
             <form class="footerForm">
-                <label for="email">NESWLETTER</label>
-                <input type="email" name="email" class="footerInputEmail" id="email">
+                <label for="email">NEWSLETTER</label>
+                <input type="email" name="email" class="footerInputEmail" id="email" placeholder="Newsletter">
                 <input type="image" src="../assets/img/correo-electronico.png" class="sendForm">
             </form>
         </div>
