--- a/pages/futurix.html
+++ b/pages/futurix.html
@@ -75,8 +75,8 @@ tenia que crear una pagina mas y solo piden 5. proximamente lo completaré-->
         </div>
         <div class="footerFormContainer">
             <form class="footerForm">
-                <label for="email">NESWLETTER</label>
-                <input type="email" name="email" class="footerInputEmail" id="email">
+                <label for="email">NEWSLETTER</label>
+                <input type="email" name="email" class="footerInputEmail" id="email" placeholder="Newsletter">
                 <input type="image" src="../assets/img/correo-electronico.png" class="sendForm">
             </form>
         </div>
