finalizacion amobos responsive + pagina bootstrap

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </section>
         <section>
             <div class="divEdge">
-                <h2>Lorem ipsum dolor sit amntium est quasi libero hic, minus corrupti ut natus iusto dolorem cupiditate
+                <h2>Lorem ipsum dolor sit amntipti ut natus iusto dolorem cupiditate
                     illo numquam voluptatem nemo neque?</h2>
             </div>
         </section>
